@@ -1,0 +1,44 @@
+/*
+	File                 : ImportSqlDatabaseTest.h
+	Project              : LabPlot
+	Description          : Tests for the import from SQL databases
+	--------------------------------------------------------------------
+	SPDX-FileCopyrightText: 2023 Alexander Semke <alexander.semke@web.de>
+
+	SPDX-License-Identifier: GPL-2.0-or-later
+*/
+
+#include "ImportSqlDatabaseTest.h"
+
+void ImportSqlDatabaseTest::initTestCase() {
+
+	// TODO: prepare the database connection
+}
+
+// ##############################################################################
+// ########################  import from a table ################################
+// ##############################################################################
+void ImportSqlDatabaseTest::testFullTable() {
+
+}
+
+void ImportSqlDatabaseTest::testFullTableCustomRowRange() {
+
+}
+
+void ImportSqlDatabaseTest::testFullTableCustomColumnRange() {
+
+}
+
+void ImportSqlDatabaseTest::testFullTableCustomRowColumnRange() {
+
+}
+
+// ##############################################################################
+// ##################  import the result of a custom query ######################
+// ##############################################################################
+void ImportSqlDatabaseTest::testQuery() {
+
+}
+
+QTEST_MAIN(ImportSqlDatabaseTest)
